# advalg-a1-lz77

./: .foo  Cargo.toml  lorem.txt  lorem.z77  simple.l77  simple.txt
src/: main.rs
