[package]
name = "advalg-a1-lz77"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arrayvec = "0.7.4"
itertools = "0.11.0"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
rand_distr = "0.4.3"
paste = "1.0.14"
slice-deque = "0.3.0"


[dependencies.bincode]
version = "2.0.0-rc.1"
default-features = false
features = ["std", "derive"]
